# ctemplate

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  data.csv  docker-compose.yml  first.c  four.c  run.sh  second.c  test.js  third.c
assets/: data.csv  large-data.csv
include/: benchmark.h  common.h  csv_reader.h  logger.h  main.h  queue.h  worker.h
scripts/: build.sh  clean.sh  install.sh  run.sh  test.sh
src/: CMakeLists.txt  csv_reader.c  logger.c  main.c  queue.c  validator.c  worker.c
src/benchmark/: CMakeLists.txt  benchmark.c
src/csv/: CMakeLists.txt  csv.c  csv.h
src/filesys/: CMakeLists.txt  filesys.c  filesys.h
src/http/: CMakeLists.txt  http.c  http.h
src/list/: CMakeLists.txt  list.c  list.h
src/queue/: CMakeLists.txt  queue.c
src/validator/: CMakeLists.txt  validator.h
test/: CMakeLists.txt  list_init_list_test.c  main.c  validator_validate_test.c
test/filesys/: CMakeLists.txt  filesys-tests.c  filesys-tests.h
test/http/: CMakeLists.txt  http-tests.c  http-tests.h
test/list/: CMakeLists.txt  list-tests.c  list-tests.h
test/validator/: CMakeLists.txt  validator-test.c  validator-test.h  validator-tests.c  validator-tests.h
tests/: CMakeLists.txt  main.c  tests.c  tests.h
tests/filesys/: filesys-tests.c
tests/http/: http-tests.c
tests/list/: list-tests.c
tests/validator/: validator-tests.c
